--- a/home/clouser.html
+++ b/home/clouser.html
@@ -1,37 +1,43 @@
-<!DOCTYPE html><html><head>
-   <title>Bootstrap 实例 - 水平表单</title>
-      <meta charset="utf-8">
-    <!--IE兼容-->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--移动端视口标签-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <link rel="stylesheet" href="//apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css">
-   <script src="//apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
-   <script src="//apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script></head><body><form class="form-horizontal" role="form">
-   <div class="form-group">
-      <label for="firstname" class="col-sm-2 control-label">名字</label>
-      <div class="col-sm-10">
-         <input type="text" class="form-control" id="firstname" 
-            placeholder="请输入名字">
-      </div>
-   </div>
-   <div class="form-group">
-      <label for="lastname" class="col-sm-2 control-label">姓</label>
-      <div class="col-sm-10">
-         <input type="text" class="form-control" id="lastname" 
-            placeholder="请输入姓">
-      </div>
-   </div>
-   <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-         <div class="checkbox">
-            <label>
-               <input type="checkbox"> 请记住我</label>
-         </div>
-      </div>
-   </div>
-   <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-         <button type="submit" class="btn btn-default">登录</button>
-      </div>
-   </div></form></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Bootstrap4 实例</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.1.0/css/bootstrap.min.css">
+</head>
+<body>
+<div class="container">
+<table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Moe</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Dooley</td>
+        <td>july@example.com</td>
+      </tr>
+    </tbody>
+</table>
+<div class="w-25 bg-warning">宽度 25%</div>
+  <div class="w-50 bg-warning">宽度 50%</div>
+  <div class="w-75 bg-warning">宽度 75%</div>
+  <div class="w-100 bg-warning">宽度 100%</div>
+  <div class="mw-100 bg-warning">最大宽度 100%</div>
+</body>
+</html>
