--- a/home/repeat/html/header.html
+++ b/home/repeat/html/header.html
@@ -26,7 +26,7 @@
 	    </ul>
 	     <!--登录注册-->
     	<div class="loginBox">
-    		<a href="javascript:viod(0)" id="login">个人中心</a>
+    		<a href="../../home/person.html" id="login">个人中心</a>
     		<a href="javascript:viod(0)" id="register">退出</a>
     	</div>
 	  </div>
