2019-4-12-自适应个人中心

--- a/home/person.html
+++ b/home/person.html
@@ -64,8 +64,47 @@
 				<!--会员中心-->
 				 <div id="me_center" class="tab-pane fade show active">
 				 	<!--会员个人信息-->
-				 	<div class="me_detail">
-				 		
+				 	<div class="me_detail d-flex align-items-center justify-content-around">
+				 		 <!--图片上传-->
+				 		 <div class="detail_img">
+				 		 		<img src="img/tab_img.png" class=""/>
+				 		 </div>
+				 		 <!--用户的基本信息-分红-余额等等-->
+				 		 <div class="detail_paper d-flex flex-column">
+				 		 	  <!--用户账号和等级-->
+				 		 	  <div class="paper_top">
+				 		 	  	  <!--电话号码-->
+				 		 	  	  <div class="users d-flex align-items-center justify-content-around">
+				 		 	  	  	 <i class="iconfont" style="color:#33A55A;">&#xe60e;</i>
+				 		 	  	  	 <p style="margin-bottom: 0;">HI,&nbsp;18548652635</p>
+				 		 	  	  </div>
+				 		 	  	  <!--会员等级-->
+				 		 	  	  <div class="levels d-flex align-items-center justify-content-around">
+				 		 	  	  	 <i class="iconfont" style="color:#33A55A;">&#xe723;</i>
+				 		 	  	  	 <p style="margin-bottom: 0;font-size: 1rem;color:#333333;">铂金会员</p>
+				 		 	  	  	 <span style="color:#349EEE;font-size: 0.87rem;">升级会员</span>
+				 		 	  	  </div>
+				 		 	  </div>
+				 		 	  <!--用户余额分红-->
+				 		 	  <div class="paper_bottom">
+				 		 	  	 <!--充值余额-->
+				 		 	  	 <div class="c_money d-flex align-items-center justify-content-around">
+				 		 	  	 	  <i class="iconfont" style="color:#FE7B8D;">&#xe608;</i>
+				 		 	  	 	  <p style="margin-bottom: 0;font-size: 0.87rem;color:#333333;">充值余额:6000.00</p>
+				 		 	  	  	<span style="color:#349EEE;font-size: 0.87rem;">去充值</span>
+				 		 	  	 </div>
+				 		 	  	 <!--门店分红-->
+				 		 	  	 <div class="m_fmoney d-flex align-items-center justify-content-around">
+				 		 	  	 	  <i class="iconfont" style="color:#33A55A;">&#xe608;</i>
+				 		 	  	 	  <p style="margin-bottom: 0;font-size: 0.87rem;color:#333333;">门店分红:6000.00</p>
+				 		 	  	 </div>
+				 		 	  	 <!--系统积分-->
+				 		 	  	 <div class="x_jfen d-flex align-items-center justify-content-around">
+				 		 	  	 		<i class="iconfont" style="color:#33A55A;">&#xe608;</i>
+				 		 	  	 	  <p style="margin-bottom: 0;font-size: 0.87rem;color:#333333;">系统积分:6000.00</p>
+				 		 	  	 </div>
+				 		 	  </div>
+				 		 </div>
 				 	</div>
 				 </div>
 				<!--会员资料-->
