--- a/home/repeat/html/header.html
+++ b/home/repeat/html/header.html
@@ -27,7 +27,7 @@
 	     <!--登录注册-->
     	<div class="loginBox">
     		<a href="../../home/person.html" id="login">个人中心</a>
-    		<a href="javascript:viod(0)" id="register">退出</a>
+    		<a href="#" id="register">退出</a>
     	</div>
 	  </div>
 	</div>
