--- a/home/order.html
+++ b/home/order.html
@@ -106,7 +106,7 @@
 						      <div class="col-12 col-md-3">
 						     		 <input type="text" class="form-control" id="carnum" placeholder="请输入您的车架号">
 						      </div>
-						      <span>注:若为未上牌的新车,请在此输入车架号</span>
+						      <span class="newcar_zhu">注:若为未上牌的新车,请在此输入车架号</span>
 						    </div>
 						    <!--消费类型 复选框--选填-->
 						    <div class="form-group form-inline">
@@ -118,11 +118,11 @@
 						      <div class="col-12 col-md-4">
 						     		<div class="RadioStyle">
 									    <div class="Block PaddingL d-flex align-items-center justify-content-between">
-									        <input type="checkbox" id="love1" />
+									        <input type="checkbox" id="love1"/>
 									        <label for="love1" class="d-flex justify-content-center">汽车</label>
-									        <input type="checkbox" id="love2" />
+									        <input type="checkbox" id="love2"/>
 									        <label for="love2" class="d-flex justify-content-center">养护</label>
-									        <input type="checkbox" id="love3" />
+									        <input type="checkbox" id="love3"/>
 									        <label for="love3" class="d-flex justify-content-center">维修</label>
 									    </div>
 										</div>
