--- a/home/team.html
+++ b/home/team.html
@@ -5,7 +5,7 @@
     <!--IE兼容-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--移动端视口标签-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
     <!--重置css-->
     <link rel="stylesheet" type="text/css" href="repeat/css/reset.css"/>
     <!--boot4css-->
@@ -19,8 +19,8 @@
 	  <!--图标-->
 	  <link rel="stylesheet" type="text/css" href="dist/font/iconfont.css"/>
 	  <!--jquery-->
-	  <script src="js/jquery-3.3.1.min.js"></script>
-	   <!--复用导航.js-->
+	 	<script src="js/jquery-3.3.1.min.js"></script>
+	  <!--复用导航.js-->
 	  <script src="repeat/js/repeat.js"></script>
 	  <!--popper弹窗.js-->
 	  <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -28,6 +28,7 @@
 	  <script src="dist/bootstrap/js/bootstrap.min.js"></script>
 	  <!--轮播图无法使用手势滑动-->
 	  <script src="repeat/js/toucher.js"></script>
+	  <script src="repeat/js/Compat.js"></script>
       <title>团队风采</title>
 	</head>
 <body>
@@ -227,5 +228,8 @@
 		 	   
 		<!--尾部插入footer-->
 		<div class="last_div"></div>
+		<script>
+		
+		</script>
 </body>
 </html>
