--- a/home/about.html
+++ b/home/about.html
@@ -5,7 +5,7 @@
     <!--IE兼容-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--移动端视口标签-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
 	  <!--重置css-->
 	  <link rel="stylesheet" type="text/css" href="repeat/css/reset.css"/>
 	  <!--boot4css-->
