--- a/home/clouser.html
+++ b/home/clouser.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bootstrap4 实例</title>
+  <title>Bootstrap 实例</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
+  <script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
 <body>
+​
 <div class="container">
-<table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-      </tr>
-    </tbody>
-</table>
-<div class="w-25 bg-warning">宽度 25%</div>
-  <div class="w-50 bg-warning">宽度 50%</div>
-  <div class="w-75 bg-warning">宽度 75%</div>
-  <div class="w-100 bg-warning">宽度 100%</div>
-  <div class="mw-100 bg-warning">最大宽度 100%</div>
+  <h2>关闭提示框</h2>
+  <p>我们可以在提示框中的 div 中添加 .alert-dismissible 类，然后在关闭按钮的链接上添加 class="close" 和 data-dismiss="alert" 类来设置提示框的关闭操作。</p>
+  <div class="alert alert-success alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>成功!</strong> 指定操作成功提示信息。
+  </div>
+  <div class="alert alert-info alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>信息!</strong> 请注意这个信息。
+  </div>
+  <div class="alert alert-warning alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>警告!</strong> 设置警告信息。
+  </div>
+  <div class="alert alert-danger alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>错误!</strong> 失败的操作。
+  </div>
+  <div class="alert alert-primary alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>首选!</strong> 这是一个重要的操作信息。
+  </div>
+  <div class="alert alert-secondary alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>次要的!</strong> 显示一些不重要的信息。
+  </div>
+  <div class="alert alert-dark alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>深灰色!</strong> 深灰色提示框。
+  </div>
+  <div class="alert alert-light alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>浅灰色!</strong>浅灰色提示框。
+  </div>
+</div>
+​
 </body>
 </html>
