--- a/home/mainten.html
+++ b/home/mainten.html
@@ -94,7 +94,7 @@
 				 </div>
 				 
 				 <!--百度地图-->
-				 <div class="row d_box">
+				 <div class="row d_box mx-auto">
 				 	 <div class="col-md-8 col-12 ditu" id="Bmap_box">
 				 	 	
 				 	 </div>
@@ -141,9 +141,9 @@
 //      new一个地图实例
 				var map = new BMap.Map("Bmap_box"); 
 //				设置地图坐标-经纬度
-				var point = new BMap.Point(104.07,30.67); 
+				var point = new BMap.Point(108.20,30.29); 
 //				选择一个中心点
-				map.centerAndZoom(point, 15); 
+				map.centerAndZoom(point,15); 
 				// 地图平移缩放控件
         map.addControl(new BMap.NavigationControl());
         // 比例尺控件
