--- a/home/clouser.html
+++ b/home/clouser.html
@@ -12,40 +12,13 @@
 <body>
 ​
 <div class="container">
-  <h2>关闭提示框</h2>
-  <p>我们可以在提示框中的 div 中添加 .alert-dismissible 类，然后在关闭按钮的链接上添加 class="close" 和 data-dismiss="alert" 类来设置提示框的关闭操作。</p>
-  <div class="alert alert-success alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>成功!</strong> 指定操作成功提示信息。
-  </div>
-  <div class="alert alert-info alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>信息!</strong> 请注意这个信息。
-  </div>
-  <div class="alert alert-warning alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>警告!</strong> 设置警告信息。
-  </div>
-  <div class="alert alert-danger alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>错误!</strong> 失败的操作。
-  </div>
-  <div class="alert alert-primary alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>首选!</strong> 这是一个重要的操作信息。
-  </div>
-  <div class="alert alert-secondary alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>次要的!</strong> 显示一些不重要的信息。
-  </div>
-  <div class="alert alert-dark alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>深灰色!</strong> 深灰色提示框。
-  </div>
-  <div class="alert alert-light alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>浅灰色!</strong>浅灰色提示框。
-  </div>
+ <ul class="pagination">
+    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+  </ul>
 </div>
 ​
 </body>
