--- a/home/news.html
+++ b/home/news.html
@@ -106,12 +106,60 @@
 										    <input type="number" class="form-control user_number">
 										    <button type="button" class="btn btn-primary" style="border-radius: none;">go</button>
 										    <li class="page-item"><a class="page-link" href="#" style="margin-left: 1px;">&gt;</a></li>
-										 </ul>
+									</ul>
 						    </div>
 						   
 						    <!--实时新闻-->
 						    <div id="second10" class="tab-pane fade">
-						      <h2>Second</h2>
+						        <ul class="nav_ul">
+						    	  	 <li class="d-flex align-items-center justify-content-between">
+						    	  	 	<!--新闻图片-->
+							    	  	 	<div class="img_box">
+							    	  	 		 <img src="img/car_nav.png" class="img-fluid"/>
+							    	  	 	</div>
+							    	  	 	<!--新闻详情-->
+							    	  	 	<div class="nav_detail d-flex flex-column justify-content-around">
+							    	  	 		 <p class="n_title">2018年12月汽车销量公布 各细分市场销量均下滑高大上刊登轧空的高端白大褂的跨国大</p>
+							    	  	 		 <p class="n_detail">据中汽协消息，我国12月汽车销量266.15万辆，同比下降13.03%。其中，乘用车销量223.31万辆，同比下降15.84%高达拉斯广发康师傅伽三公分覆盖苏菲嘎斯福</p>
+							    	  	 		 <span class="n_date">01-15</span>
+							    	  	 	</div>
+						    	  	 </li>
+						    	  	 <li class="d-flex align-items-center justify-content-between">
+						    	  	 	<!--新闻图片-->
+							    	  	 	<div class="img_box">
+							    	  	 		 <img src="img/car_nav.png" class="img-fluid"/>
+							    	  	 	</div>
+							    	  	 	<!--新闻详情-->
+							    	  	 	<div class="nav_detail d-flex flex-column">
+							    	  	 		 <p class="n_title">2018年12月汽车销量公布 各细分市场销量均下滑高大上刊登轧空的高端白大褂的跨国大</p>
+							    	  	 		 <p class="n_detail">据中汽协消息，我国12月汽车销量266.15万辆，同比下降13.03%。其中，乘用车销量223.31万辆，同比下降15.84%高达拉斯广发康师傅伽三公分覆盖苏菲嘎斯福</p>
+							    	  	 		 <span class="n_date">01-15</span>
+							    	  	 	</div>
+						    	  	 </li>
+						    	  	 <li class="d-flex align-items-center justify-content-between">
+						    	  	 	<!--新闻图片-->
+							    	  	 	<div class="img_box">
+							    	  	 		 <img src="img/car_nav.png" class="img-fluid"/>
+							    	  	 	</div>
+							    	  	 	<!--新闻详情-->
+							    	  	 	<div class="nav_detail d-flex flex-column">
+							    	  	 		 <p class="n_title">2018年12月汽车销量公布 各细分市场销量均下滑高大上刊登轧空的高端白大褂的跨国大</p>
+							    	  	 		 <p class="n_detail">据中汽协消息，我国12月汽车销量266.15万辆，同比下降13.03%。其中，乘用车销量223.31万辆，同比下降15.84%高达拉斯广发康师傅伽三公分覆盖苏菲嘎斯福</p>
+							    	  	 		 <span class="n_date">01-15</span>
+							    	  	 	</div>
+						    	  	 </li>
+						    	  </ul>
+						    	   <ul class="pagination">
+										    <li class="page-item"><a class="page-link" href="">&lt;</a></li>
+										    <li class="page-item"><a class="page-link" href="#">1</a></li>
+										    <li class="page-item active"><a class="page-link" href="#">2</a></li>
+										    <li class="page-item"><a class="page-link" href="#">3</a></li>
+										    <li class="page-item"><a class="page-link" href="#">4</a></li>
+										    <li class="page-item"><a class="page-link" href="#">5</a></li>
+										    <input type="number" class="form-control user_number">
+										    <button type="button" class="btn btn-primary" style="border-radius: none;">go</button>
+										    <li class="page-item"><a class="page-link" href="#" style="margin-left: 1px;">&gt;</a></li>
+									</ul>
 						    </div>
 					  </div>
 			 		</div>
@@ -145,5 +193,35 @@
 		</div>
 		<!--尾部插入footer-->
 		<div class="last_div"></div>
+		<script type="text/javascript">
+			const computedPagination = (val, pageSize) => {
+			    let pageInfo ={};
+			    let pages = [];
+			    val.forEach((item, index) => {
+			        let page = Math.floor(index / pageSize);
+			        if ( !pages[page] ) {
+			            pages[page] = []
+			        }
+			        pages[page].push(item)
+			    })
+			    pageInfo.list = pages;
+			    pageInfo.total = val.length;
+			    return pageInfo;
+			}
+
+			$(function(){
+				//全局API地址
+				var paths = 'http://gw.huanqiuwanjia.com/Api/';
+				var pathImg = 'http://gw.huanqiuwanjia.com';
+
+				// 行业新闻
+				// 获取行业新闻分页器
+				var hyPag = Array.from($('#first10 .pagination li a'))
+				hyPag.each(function(index, el) {
+					console.log(index,el)
+				});
+			})
+			
+		</script>
 </body>
 </html>
